<resources>
    <plurals name="number_of_seconds">
        <item quantity="one">%d секунда</item>
        <item quantity="few">%d секунды</item>
        <item quantity="other">%d секунд</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">Optovik</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmation_timer">Запросить код повторно можно\nчерез %1$s</string>
    <string name="get_code_button">Получить код</string>
    <string name="code_input">Введите код из SMS сообщения</string>
    <string name="next_btton">Продолжить</string>
    <string name="info_textview">Введите номер телефона. \nВам придет СМС с кодом подтверждения.</string>
    <string name="Enter">Вход</string>
    <string name="optovik">Оптовик</string>
    <string name="Categoryes">Категории</string>
    <string name="connect_problem">Проблемы со связью</string>
    <string name="check_settings">Проверьте настройки сети \n или обновите экран</string>
    <string name="example_description">Хрустящая корочка, которая образуется на брусочках картофеля, обжаренного во
        фритюре, доставляет настоящее гастрономическое удовольствие. Благодаря такому способу обжарки картофель внутри
        становится невероятно мягким и сочным, а сверху появляется тонкая и весьма аппетитная корочка.
    </string>
    <string name="Optivik">Оптовик</string>
    <string name="empty_basket">Корзина пуста</string>
    <string name="go_to_catalog">Перейдите в каталог и добавьте \n товары в корзину</string>
    <string name="clean_basket">Вы точно хотите очистить корзину ?</string>
    <string name="no">Нет, не хочу</string>

    <string name="yas">Да, удалить</string>
    <string name="sum">Сумма</string>
    <string name="adresbook">Адресная книга</string>
    <string name="my_orders">Мои заказы</string>
    <string name="last_orders">Последние заказы</string>
    <string name="notification">Уведомления</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_title">Новое уведомление</string>

    <string name="have_not_address">У вас не указан адресс доставки, свяжитесь с \n оператором чтобы решить данную проблему</string>
</resources>
