<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.screens.inputphone.ui.InputPhoneFragment">

    <android.support.constraint.ConstraintLayout

        android:id="@+id/constraintButton"
        android:layout_width="257dp"
        android:layout_height="183dp"
        android:layout_marginTop="30dp"
        mask:layout_constraintEnd_toEndOf="parent"
        mask:layout_constraintStart_toStartOf="parent"
        mask:layout_constraintTop_toBottomOf="@+id/constraintText">

        <TextView
            android:id="@+id/timer"
            android:layout_width="235dp"
            android:layout_height="64dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/confirmation_timer"
            mask:layout_constraintBottom_toBottomOf="parent"
            mask:layout_constraintEnd_toEndOf="parent"
            mask:layout_constraintStart_toStartOf="parent" />

        <com.chaos.view.PinView
            android:id="@+id/PinView_inputCodeFragment_code"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:cursorVisible="false"
            android:fontFamily="@font/sfprolight"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:hideLineWhenFilled="true"
            app:itemCount="4"
            app:itemSpacing="16dp"
            app:itemWidth="16dp"
            app:lineColor="#EBEBEB"
            app:viewType="line"
            mask:layout_constraintBottom_toTopOf="@+id/getCode"
            mask:layout_constraintEnd_toEndOf="parent"
            mask:layout_constraintHorizontal_bias="0.498"
            mask:layout_constraintStart_toStartOf="parent"
            tools:text="123456" />

        <Button
            android:id="@+id/getCode"
            android:layout_width="180dp"
            android:layout_height="41dp"
            android:layout_below="@+id/PinView_inputCodeFragment_code"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/activebutton"
            android:fontFamily="@font/sfprolight"
            android:text="@string/get_code_button"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            android:visibility="gone"
            mask:layout_constraintEnd_toEndOf="parent"
            mask:layout_constraintStart_toStartOf="parent"
            mask:layout_constraintTop_toBottomOf="@+id/PinView_inputCodeFragment_code" />
    </android.support.constraint.ConstraintLayout>

    <include
        android:id="@+id/toolbarmain"
        layout="@layout/toolbar_autorization_with_arrow"
        mask:layout_constraintBottom_toTopOf="@+id/constraintText"
        mask:layout_constraintEnd_toEndOf="parent"
        mask:layout_constraintStart_toStartOf="parent"
        mask:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintText"
        android:layout_width="284dp"
        android:layout_height="69dp"
        android:layout_marginTop="111dp"
        mask:layout_constraintBottom_toTopOf="@+id/constraintButton"
        mask:layout_constraintEnd_toEndOf="parent"
        mask:layout_constraintHorizontal_bias="0.496"
        mask:layout_constraintStart_toStartOf="parent"
        mask:layout_constraintTop_toBottomOf="@+id/toolbarmain">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="253dp"
            android:layout_height="26dp"
            android:layout_below="@+id/phoneOnEditCode"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sfprolight"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="3sp"
            android:text="@string/code_input"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#444444"
            android:textSize="14sp"
            android:translationY="-1.45sp"
            mask:layout_constraintEnd_toEndOf="parent"
            mask:layout_constraintStart_toStartOf="parent"
            mask:layout_constraintTop_toBottomOf="@+id/phoneOnEditCode" />

        <TextView
            android:id="@+id/phoneOnEditCode"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/sfprolight"
            android:gravity="center"
            android:text="586587667"
            android:textColor="#000000"
            android:textSize="16sp"
            mask:layout_constraintBottom_toTopOf="@+id/textView3"
            mask:layout_constraintEnd_toEndOf="parent"
            mask:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>