<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activityMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screens.main.ui.MainActivity"
        android:background="@color/colorPrimaryDark">


    <include
            layout="@layout/toolbar_main"
            android:id="@+id/toolbarmain"
            app:layout_constraintBottom_toTopOf="@+id/nestedScrollView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="647dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/nestedScrollView"
            app:layout_constraintTop_toBottomOf="@+id/toolbarmain" app:layout_constraintVertical_bias="0.0"
    >


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:orientation="vertical">


            <android.support.v7.widget.RecyclerView
                    tools:itemCount="3"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/toolbarmain" android:id="@+id/event_recycler"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            />


            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/Categoryes"
                    app:layout_constraintTop_toBottomOf="@+id/event_recycler"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:id="@+id/textView"
                    android:textColor="#C6C6C6"
                    android:textSize="19sp"
                    android:fontFamily="@font/sfprodisplay"
            />


            <android.support.v7.widget.RecyclerView
                    android:layout_width="325dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/category_recycler"
                    android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


        <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/nestedScrollView"/>

    <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".AutorizationActivity"
            android:id="@+id/mainactivity_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            android:visibility="gone"
    >

        <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF">


            <ImageView
                    android:src="@drawable/ic_wifi"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="175dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="176dp"/>
            <Button
                    android:layout_width="160dp"
                    android:layout_height="41dp"
                    android:id="@+id/update"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="109dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="106dp"
                    android:textAlignment="center"
                    android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
                    android:background="@drawable/activebutton" android:textAllCaps="false" android:text="Обновить"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:clickable="true"/>
            <TextView
                    android:text="@string/connect_problem"
                    android:textColor="#000000"
                    android:fontFamily="@font/sfprodisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" android:layout_marginTop="26dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="175dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="178dp"
                    android:textSize="18sp"/>
            <TextView
                    android:text="@string/check_settings"
                    android:layout_width="191dp"
                    android:layout_height="57dp"
                    android:id="@+id/textView5" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="101dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="101dp" android:textAlignment="center"
                    android:textColor="#444444"
                    android:textSize="14sp" app:layout_constraintHorizontal_bias="0.666"
                    android:fontFamily="@font/sfprolight"/>
        </android.support.constraint.ConstraintLayout>


    </FrameLayout>

</android.support.constraint.ConstraintLayout>